--- a/charts/incubator/penpot/values.yaml
+++ b/charts/incubator/penpot/values.yaml
@@ -22,6 +22,12 @@ podSecurityContext:
   runAsUser: 0
   runAsGroup: 0
 
+hostAliases:
+  - ip: localhost
+    hostnames:
+      - penpot-backend
+      - penpot-exporter
+
 penpot:
   public_uri: "http://localhost:{{ .Values.service.main.ports.main.port }}"
   flags:
