--- a/charts/incubator/penpot/values.yaml
+++ b/charts/incubator/penpot/values.yaml
@@ -81,6 +81,8 @@ penpot:
 envFrom:
   - secretRef:
       name: '{{ include "tc.common.names.fullname" . }}-common-secret'
+  - secretRef:
+      name: '{{ include "tc.common.names.fullname" . }}-frontend-secret'
 
 probes:
   liveness:
