feat(penpot): add Penpot (#4785)
* WIP(penpot) add Penpot

* fix smtp

* remove some comments

* update code

* update

* fix secret

* fix misspelling

* fix redis

* add tpls

* Update charts/incubator/penpot/templates/_exporter.tpl

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* Update charts/incubator/penpot/templates/common.yaml

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* Update charts/incubator/penpot/templates/common.yaml

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* Update charts/incubator/penpot/templates/_backend.tpl

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* fix values + tpls

* cleanup

* fix

* Update charts/incubator/penpot/values.yaml

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* Apply suggestions from code review

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* rofs set to false + update dependencies

* hostAliases

* Update charts/incubator/penpot/values.yaml

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>

* split publicURI

* host

* trim trim

* probes

* trimmmm

Signed-off-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>
Co-authored-by: Stavros Kois <47820033+stavros-k@users.noreply.github.com>
Co-authored-by: Stavros kois <s.kois@outlook.com>

--- a/cspell.config.yaml
+++ b/cspell.config.yaml
@@ -175,11 +175,13 @@ words:
   - Nordigen
   - notebookbar
   - ODBC
+  - OIDC
   - OOKLA
   - organizr
   - ornias
   - ovpn
   - passwrd
+  - penpot
   - pgid
   - photoprism
   - pihole
