--- a/charts/incubator/penpot/values.yaml
+++ b/charts/incubator/penpot/values.yaml
@@ -1,18 +1,18 @@
 # TODO: Update images
 image:
-  repository: penpotapp/frontend
+  repository: tccr.io/truecharts/penpot-frontend
   pullPolicy: IfNotPresent
-  tag: latest@sha256:0cf7ce270c8e3fc18459165567549b8c578a7f37c257785efd21d15189fb10ae
+  tag: 1.16.2@sha256:c41349dcd43eccf1bf61809e9d46d54dcb22bfbd31c6fb199630e2fbec54d628
 
 backendImage:
-  repository: penpotapp/backend
+  repository: tccr.io/truecharts/penpot-backend
   pullPolicy: IfNotPresent
-  tag: latest@sha256:e1485e99dd7b587155cf577408bab8fb85daf7b1bb0586958acc19ed5422b869
+  tag: 1.16.2@sha256:99997f7640b27274f0b1570cd8c839266661e54a3314dd1f1caf4dd1220de752
 
 exporterImage:
-  repository: penpotapp/exporter
+  repository: tccr.io/truecharts/penpot-exporter
   pullPolicy: IfNotPresent
-  tag: latest@sha256:e5c8d7b78feae9997a11bf6b7281aa19907a799c97d76b8d46e0caa7a349fc3f
+  tag: 1.16.2@sha256:8104c3dd90001ca94023b4e0f6a47bdd3868610a31f25fb2aa9e61d2f10130b3
 
 securityContext:
   runAsNonRoot: false
