feat(common): allow for rootless db-wait and cve-free autopermissions (#306)
**Description**
This PR splits the root-requiring and non-root-requiring parts of the
default initcontainer.

- The root-requiring part, is now run on a bare-bones alpine image, for
added security.
- The database waits, are now running rootless.

In the future more of the initcontainers should be hardened with
least-privilage in mine.

**⚙️ Type of change**

- [ ] ⚙️ Feature/App addition
- [ ] 🪛 Bugfix
- [ ] ⚠️ Breaking change (fix or feature that would cause existing
functionality to not work as expected)
- [ ] 🔃 Refactor of current code

**🧪 How Has This Been Tested?**
<!--
Please describe the tests that you ran to verify your changes. Provide
instructions so we can reproduce. Please also list any relevant details
for your test configuration
-->

**📃 Notes:**
<!-- Please enter any other relevant information here -->

**✔️ Checklist:**

- [ ] ⚖️ My code follows the style guidelines of this project
- [ ] 👀 I have performed a self-review of my own code
- [ ] #️⃣ I have commented my code, particularly in hard-to-understand
areas
- [ ] 📄 I have made corresponding changes to the documentation
- [ ] ⚠️ My changes generate no new warnings
- [ ] 🧪 I have added tests to this description that prove my fix is
effective or that my feature works
- [ ] ⬆️ I increased versions for any altered app according to semantic
versioning

**➕ App addition**

If this PR is an app addition please make sure you have done the
following.

- [ ] 🪞 I have opened a PR on
[truecharts/containers](https://github.com/truecharts/containers) adding
the container to TrueCharts mirror repo.
- [ ] 🖼️ I have added an icon in the Chart's root directory called
`icon.png`

---

_Please don't blindly check all the boxes. Read them and only check
those that apply.
Those checkboxes are there for the reviewer to see what is this all
about and
the status of this PR with a quick gl

--- a/charts/common/values.yaml
+++ b/charts/common/values.yaml
@@ -47,6 +47,22 @@ ubuntuImage:
   # -- Specify the redis image pull policy
   pullPolicy: IfNotPresent
 
+alpineImage:
+  # -- Specify the multi-init image
+  repository: tccr.io/truecharts/alpine
+  # -- Specify the redis image tag
+  tag: v3.17.0@sha256:f8607e14a5e456c1b8fe50b7f0c9371b4aae543d23080f5e2fe0bdbb06d2413b
+  # -- Specify the redis image pull policy
+  pullPolicy: IfNotPresent
+
+kubectlImage:
+  # -- Specify the multi-init image
+  repository: tccr.io/truecharts/kubectl
+  # -- Specify the redis image tag
+  tag: v1.26.0@sha256:6d6e0e50f28b961ed1c1c6a9c140553238641591fbdc9ac7c1a348636f78c552
+  # -- Specify the redis image pull policy
+  pullPolicy: IfNotPresent
+
 # -- Used to inject our own operator manifests into SCALE
 manifests:
   enabled: true
