--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,15 +1,17 @@
 {
-  "enabled": true,
+  "semanticCommits": "enabled",
   "extends": ["helpers:pinGitHubActionDigests"],
   "dependencyDashboard": true,
-  "dependencyDashboardTitle": "Renovate Dashboard",
-  "assigneesFromCodeOwners": true,
-  "reviewersFromCodeOwners": true,
+  "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prIgnoreNotification"],
+  "commitMessageTopic": "{{depName}}",
+  "commitMessageExtra": "to {{newVersion}}",
+  "commitMessageSuffix": "",
   "rebaseWhen": "conflicted",
-  "prConcurrentLimit": 25,
-  "pinDigests": true,
+  "prConcurrentLimit": 100,
   "timezone":"Europe/Amsterdam",
+  "pinDigests": true,
+  "automerge": true,
   "gitAuthor": "TrueCharts-Admin <bot@truecharts.org>",
   "helm-values": {
     "fileMatch": ["charts/.+/.*values\\.yaml$", "charts/.+/SCALE/.*_values\\.yaml$"]
