--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -33,6 +33,7 @@
       "enabled": true,
       "pinDigests": true,
       "automerge": true,
+      "separateMinorPatch": true,
       "commitMessageTopic": "container image {{depName}}",
       "commitMessageExtra": "to {{#if isSingleVersion}}v{{{newVersion}}}{{else}}{{{newValue}}}{{/if}}",
       "matchUpdateTypes": ["major", "minor", "patch", "digest"],
